added 3 error pages

--- a/html/basic_error_page.html
+++ b/html/basic_error_page.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head lang="en">
     <style>
-        p {
+        h1 {
             color: red;
             font-weight: bold;
             font-size: 80;
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <p>
+    <h1 title="This is an error page">
         Error, page not found.
-    </p>
+    </h1>
 </body>
 
 </html>
