added cgi extension

--- a/html/500.html
+++ b/html/500.html
@@ -41,7 +41,7 @@
         <h1>500</h1>
         <h2>Internal Server Error</h2>
         <p>Oops! Something went wrong on our end. Please try again later.</p>
-        <p><a href="./">Go to Homepage</a></p>
+        <p><a href="./403.html">Go to Homepage</a></p>
     </div>
 </body>
 </html>
