--- a/html/404.html
+++ b/html/404.html
@@ -41,7 +41,7 @@
         <h1>404</h1>
         <h2>Page Not Found</h2>
         <p>Sorry, but the page you are looking for does not exist.</p>
-        <p><a>Go to Homepage</a></p>
+        <p><a href="./">Go to Homepage</a></p>
     </div>
 </body>
 </html>
