--- a/html/error_pages/404.html
+++ b/html/error_pages/404.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,36 +13,44 @@
             text-align: center;
             padding: 50px;
         }
+
         .container {
             max-width: 600px;
             margin: 0 auto;
         }
+
         h1 {
             font-size: 120px;
             margin: 0;
         }
+
         h2 {
             font-size: 40px;
             margin: 0;
         }
+
         p {
             font-size: 18px;
         }
+
         a {
             color: #007BFF;
             text-decoration: none;
         }
+
         a:hover {
             text-decoration: underline;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>404</h1>
         <h2>Page Not Found</h2>
         <p>Sorry, but the page you are looking for does not exist.</p>
-        <p><a href="./">Go to Homepage</a></p>
+        <p><a href="../../html/">Go to Homepage</a></p>
     </div>
 </body>
+
 </html>
