finished error_pages html

--- a/html/error_pages/100.html
+++ b/html/error_pages/100.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>100 Forbidden</title>
+    <title>100 Continue</title>
     <style>
         body {
             background-color: #f8f8f8;
@@ -47,9 +47,9 @@
 <body>
     <div class="container">
         <h1>100</h1>
-        <h2>Forbidden</h2>
+        <h2>Continue</h2>
         <p>Sorry, but you do not have permission to access this page.</p>
-        <p><a>Go to Homepage</a></p>
+        <p><a href="/">Go to Homepage</a></p>
     </div>
 </body>
 
