--- a/html/error_pages/226.html
+++ b/html/error_pages/226.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>226 Forbidden</title>
+    <title>226 IM Used</title>
     <style>
         body {
             background-color: #f8f8f8;
@@ -12,37 +13,44 @@
             text-align: center;
             padding: 50px;
         }
+
         .container {
             max-width: 600px;
             margin: 0 auto;
         }
+
         h1 {
             font-size: 120px;
             margin: 0;
         }
+
         h2 {
             font-size: 40px;
             margin: 0;
         }
+
         p {
             font-size: 18px;
         }
+
         a {
             color: #007BFF;
             text-decoration: none;
         }
+
         a:hover {
             text-decoration: underline;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>226</h1>
-        <h2>Forbidden</h2>
+        <h2>IM Used</h2>
         <p>Sorry, but you do not have permission to access this page.</p>
-        <p><a>Go to Homepage</a></p>
+        <p><a href="/">Go to Homepage</a></p>
     </div>
 </body>
-</html>
 
+</html>
