--- a/html/error_pages/404.html
+++ b/html/error_pages/404.html
@@ -47,9 +47,9 @@
 <body>
     <div class="container">
         <h1>404</h1>
-        <h2>Page Not Found</h2>
-        <p>Sorry, but the page you are looking for does not exist.</p>
-        <p><a href="../../html/">Go to Homepage</a></p>
+        <h2>Not Found</h2>
+        <p>Sorry, but you do not have permission to access this page.</p>
+        <p><a href="/">Go to Homepage</a></p>
     </div>
 </body>
 
