image/gif working lets gofixed leak in directory listing

--- a/html/imageGIF.html
+++ b/html/imageGIF.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
 
+<!doctype html>
+<html>
 <head>
     <title>WEBSERV</title>
 </head>
-
 <body>
     <h1>This is the default Page</h1>
-    <img src="kitty-puke-puke.gif"/>
+    <img src="catGif.gif" alt="Animated GIF"/>
 </body>
-
 </html>
