--- a/website/taylor/lyrics_1989/bad_blood.html
+++ b/website/taylor/lyrics_1989/bad_blood.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bad Blood (Taylor's Version) Lyrics</title>
+    <link rel="icon" type="image/x-icon" href="1989_taylors_version_cover.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -152,7 +153,7 @@
         <p>Now we got problems
         <p>And I don't think we can solve them
         <p>You made a really deep cut
-        <p>And, baby, now we got bad blood, hey
+        <p>And, baby, now we got bad blood
         </p>
 
     </div>
