--- a/website/taylor/lyrics_1989/welcome_to_new_york.html
+++ b/website/taylor/lyrics_1989/welcome_to_new_york.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to New York Lyrics</title>
+    <title>Welcome to New York (Taylor's Version) Lyrics</title>
+    <link rel="icon" type="image/x-icon" href="1989_taylors_version_cover.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -56,7 +57,7 @@
     <h1>
         <img src="1989_taylors_version_cover.jpg" alt="Cover_1989"
             style="vertical-align: middle; width: 100px; height: 100px;">
-        Welcome to New York
+        Welcome to New York (Taylor's Version) Lyrics
     </h1>
     <div class="lyrics">
         <p1>[Verse 1]</p1>
