--- a/website/taylor/lyrics_1989/now_that_we_don't_talk.html
+++ b/website/taylor/lyrics_1989/now_that_we_don't_talk.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Now That We Don't Talk (Taylor's Version) [From The Vault] Lyrics</title>
+    <link rel="icon" type="image/x-icon" href="1989_taylors_version_cover.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
