--- a/website/taylor/lyrics_1989/out_of_the_woods.html
+++ b/website/taylor/lyrics_1989/out_of_the_woods.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Out Of The Woods (Taylor's Version) Lyrics</title>
+    <link rel="icon" type="image/x-icon" href="1989_taylors_version_cover.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
