--- a/website/taylor/lyrics_1989/shake_it_off.html
+++ b/website/taylor/lyrics_1989/shake_it_off.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All You Had to Do Was Stay(Taylor's Version) Lyrics</title>
+    <link rel="icon" type="image/x-icon" href="1989_taylors_version_cover.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
