--- a/website/taylor/lyrics_midnights/youre_losing_me.html
+++ b/website/taylor/lyrics_midnights/youre_losing_me.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>You're Losing Me (From The Vault) Lyrics</title>
+    <link rel="icon" type="image/x-icon" href="midnights_til_dawn_edition_cover.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
