--- a/website/taylor/site.html
+++ b/website/taylor/site.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albums of Taylor Swift</title>
+    <link rel="icon" type="image/x-icon" href="TTPD.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
