fixed html main taylor swift page

--- a/website/taylor/site.html
+++ b/website/taylor/site.html
@@ -60,7 +60,7 @@
     <main>
         <section class="introduction">
             <h2>Introduction</h2>
-            <img src="TTPD.jpg" alt="1989 (Taylor's Version) Cover">
+            <img src="TTPD.jpg" alt="The Tortured Poets Department: The Antology Album Cover">
             <p>Currently we only have 1989 (TV) and Midnights, sorry :(</p>
         </section>
 
