added new exception

--- a/website/dumas/Thomas/thomas.html
+++ b/website/dumas/Thomas/thomas.html
@@ -145,13 +145,20 @@
             <span class="close">&times;</span>
             <h2>My Favorite Songs</h2>
             <ul>
-                <li>Physical, (Dua Lipa)</li>
-                <li>Peter, (Taylor Swift)</li>
-                <li>ILIPW, (Taylor Swift)</li>
-                <li>Clean, (Taylor Swift)</li>
-                <li>SOTB, (Taylor Swift)</li>
-                <li>YOYOK, (Taylor Swift)</li>
-                <li>High Infidelity, (Taylor Swift)</li>
+                <li><a href="https://youtu.be/9HDEHj2yzew?si=QsTZnrZCkbyFFiSe" target="_blank">Physical, (Dua Lipa)</a>
+                </li>
+                <li><a href="https://youtu.be/Mxxswu7V1Us?si=qB4kggtUeNgku2Nb" target="_blank">Peter, (Taylor Swift)</a>
+                </li>
+                <li><a href="https://youtu.be/6HIA7ouBfGY?si=yz_Gtr1RtQQriSBD" target="_blank">ILIPW, (Taylor Swift)</a>
+                </li>
+                <li><a href="https://youtu.be/AppsjTInqiw?si=D5zcGu_uuDl6MdJ2" target="_blank">Clean, (Taylor Swift)</a>
+                </li>
+                <li><a href="https://youtu.be/ycE7bUq3-2k?si=guDiahbsgxndWVXB" target="_blank">SOTB, (Taylor Swift)</a>
+                </li>
+                <li><a href="https://youtu.be/4-Hueo8pru0?si=6TtdD7B5akNkJTpA" target="_blank">YOYOK, (Taylor Swift)</a>
+                </li>
+                <li><a href="https://youtu.be/-qee6dFKlw4?si=9jvQvIy7vlTMQ4cq" target="_blank">High Infidelity, (Taylor
+                        Swift)</a></li>
             </ul>
         </div>
     </div>
