--- a/html/cgi/php/ColorModifier.html
+++ b/html/cgi/php/ColorModifier.html
@@ -9,7 +9,7 @@
 		}
 
 		body {
-			background-color: seagreen;
+			background-color: bisque;
 			display: flex;
 			justify-content: center;
 			align-items: center;
@@ -26,12 +26,9 @@
 </head>
 
 <body>
-	<h1>Create Your UserBoard !</h1>
-	<form action="cookie.py" method="post">
-		Username: <input type="text" name="username" />
-
+	<h1> Change Your BackGround Color !</h1>
+	<form action="ColorSetter.php" method="get">
 		<br />
-
 		<label for="colors">BackGround Color:</label>
 		<select name="BackGroundColor" id="Colors">
 			<option value="PaleGreen">PaleGreen</option>
