--- a/html/cgi/python/ColorModifier.html
+++ b/html/cgi/python/ColorModifier.html
@@ -27,7 +27,7 @@
 
 <body>
 	<h1> Change Your BackGround Color !</h1>
-	<form action="ColorSetter.py" method="get">
+	<form action="/python/ColorSetter.py" method="get">
 		<br />
 		<label for="colors">BackGround Color:</label>
 		<select name="BackGroundColor" id="Colors">
