--- a/html/cgi/python/connectionForm.html
+++ b/html/cgi/python/connectionForm.html
@@ -27,7 +27,7 @@
 
 <body>
 	<h1>Create Your UserBoard !</h1>
-	<form action="cookie.py" method="post">
+	<form action="/python/cookie.py" method="post">
 		Username: <input type="text" name="username" />
 
 		<br />
