--- a/html/cgi/ruby/connectionForm.html
+++ b/html/cgi/ruby/connectionForm.html
@@ -29,7 +29,7 @@
 
 <body>
 	<h1>Create Your UserBoard !</h1>
-	<form action="../php/cookie.php" method="post">
+	<form action="/ruby/cookie.rb" method="post">
 		Username: <input type="text" name="username" />
 
 		<br />
