created new confs, removed past ones that are kinda useless now and added basic conf hard coded

--- a/website/dumas/Thomas/thomas.html
+++ b/website/dumas/Thomas/thomas.html
@@ -7,10 +7,18 @@
     <title>✨Thomas' Page✨</title>
     <link rel="icon" type="image/x-icon" href="TTPD.jpg">
     <style>
+        html,
+        body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
         body {
             font-family: Arial, sans-serif;
             background-image: url('TTPD.jpg');
             background-size: cover;
+            background-repeat: no-repeat;
             background-position: center;
             color: #333;
             text-align: center;
