--- a/html/cgi/ruby/ColorModifier.html
+++ b/html/cgi/ruby/ColorModifier.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ConnectionForm</title>
+	<link rel="icon" type="image/x-icon" href="ruby.jpg">
 	<style>
 		* {
 			font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
