real tester for requests created, made eveerything prettier and deleted useless stuff

--- a/html/imageGIF.html
+++ b/html/imageGIF.html
@@ -3,11 +3,14 @@
 
 <!doctype html>
 <html>
+
 <head>
     <title>WEBSERV</title>
 </head>
+
 <body>
     <h1>This is the default Page</h1>
-    <img src="catGif.gif" alt="Animated GIF"/>
+    <img src="./images/catGif.gif" alt="Animated GIF" />
 </body>
+
 </html>
